Add header section

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,41 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="./css/styles.css" rel="stylesheet">
-</head>
-<body>
-  <h1 class="text-3xl font-bold">
-    Hello world!
-  </h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@400;700&family=Open+Sans&display=swap"
+      rel="stylesheet"
+    />
+
+    <link href="./css/styles.css" rel="stylesheet" />
+  </head>
+  <body>
+    <!-- Header Section -->
+    <header class="bg-black py-12 text-gega-grey font-gemunu uppercase">
+      <!-- Header Container -->
+      <div class="container flex items-center justify-between space-x-16">
+        <!-- Header Logo -->
+        <a href="" class="text-6xl font-bold">GEGA</a>
+        <!-- Header Navigation -->
+        <nav class="flex flex-1 justify-between">
+          <!-- Header Menü -->
+          <div class="flex space-x-8 text-lg items-center">
+            <a href="#" class="hover:text-gega-melon transition duration-500 uppercase">movie</a>
+            <a href="#" class="hover:text-gega-melon transition duration-500 uppercase">celebrities</a>
+            <a href="#" class="hover:text-gega-melon transition duration-500 uppercase">blog</a>
+            <a href="#" class="hover:text-gega-melon transition duration-500 uppercase">news</a>
+            <a href="#" class="hover:text-gega-melon transition duration-500 uppercase">about</a>
+          </div>
+          <!-- Header Login -->
+          <div class="flex items-center space-x-8">
+          </div>
+        </nav>
+      </div>
+    </header>
+
+  </body>
 </html>
