--- a/src/index.html
+++ b/src/index.html
@@ -11,16 +11,28 @@
       rel="stylesheet"
     />
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link href="./css/styles.css" rel="stylesheet" />
   </head>
   <body class="bg-slate-800">
     <!-- Header Section -->
-    <header class="bg-black py-6 lg:py-12 text-gega-grey ">
+    <header class="bg-black py-6 lg:py-12 text-gega-grey">
       <!-- Header Container -->
-      <div class="container flex items-center justify-between space-x-8 lg:space-x-16">
+      <div
+        class="container flex items-center justify-between space-x-8 lg:space-x-16"
+      >
         <!-- Header Logo -->
-        <a href="#" class="text-3xl pl-6 md:pl-0 lg:text-6xl font-bold text-transparent bg-gradient-to-r bg-clip-text from-gega-red to-gega-grey">GEGA</a>
+        <a
+          href="#"
+          class="text-3xl pl-6 md:pl-0 lg:text-6xl font-bold text-transparent bg-gradient-to-r bg-clip-text from-gega-red to-gega-grey"
+          >GEGA</a
+        >
         <!-- Mobile Menü -->
         <div class="block md:hidden pr-6">
           <div class="space-y-1 cursor-pointer">
@@ -34,30 +46,132 @@
         <nav class="hidden md:flex flex-1 justify-between">
           <!-- Header Menü -->
           <div class="flex space-x-4 lg:space-x-8 lg:text-lg items-center">
-            <a href="#" class="hover:text-gega-melon transition duration-500 uppercase">movie</a>
-            <a href="#" class="hover:text-gega-melon transition duration-500 uppercase">celebrities</a>
-            <a href="#" class="hover:text-gega-melon transition duration-500 uppercase">blog</a>
-            <a href="#" class="hover:text-gega-melon transition duration-500 uppercase">news</a>
-            <a href="#" class="hover:text-gega-melon transition duration-500 uppercase">about</a>
+            <a
+              href="#"
+              class="hover:text-gega-melon transition duration-500 uppercase"
+              >movie</a
+            >
+            <a
+              href="#"
+              class="hover:text-gega-melon transition duration-500 uppercase"
+              >celebrities</a
+            >
+            <a
+              href="#"
+              class="hover:text-gega-melon transition duration-500 uppercase"
+              >blog</a
+            >
+            <a
+              href="#"
+              class="hover:text-gega-melon transition duration-500 uppercase"
+              >news</a
+            >
+            <a
+              href="#"
+              class="hover:text-gega-melon transition duration-500 uppercase"
+              >about</a
+            >
           </div>
           <!-- Header Login -->
           <div class="flex items-center space-x-4 lg:space-x-8">
             <!-- Search Area -->
             <form>
               <div class="group border-r px-4 mx-4 py-1 border-gega-red">
-                <input type="text" class="opacity-0 group-hover:opacity-100 bg-transparent border-b border-gega-red focus:outline-none w-24 lg:w-44 transition duration-500">
-                <button class="-ml-4 group-hover:ml-0 transition duration-500"><i class="fas fa-search group-hover:text-gega-red transition duration-500"></i></button>
+                <input
+                  type="text"
+                  class="opacity-0 group-hover:opacity-100 bg-transparent border-b border-gega-red focus:outline-none w-24 lg:w-44 transition duration-500"
+                />
+                <button class="-ml-4 group-hover:ml-0 transition duration-500">
+                  <i
+                    class="fas fa-search group-hover:text-gega-red transition duration-500"
+                  ></i>
+                </button>
               </div>
             </form>
             <!-- SignUp Area -->
             <div class="flex items-center space-x-4 lg:space-x-8 lg:text-lg">
               <a href="#" class="">Login</a>
-              <a href="#" class="bg-gega-red px-3 py-1 hover:bg-rose-600 hover:text-gega-grey cursor-pointer transition duration-500 whitespace-nowrap">Sign Up</a>
+              <a
+                href="#"
+                class="bg-gega-red px-3 py-1 hover:bg-rose-600 hover:text-gega-grey cursor-pointer transition duration-500 whitespace-nowrap"
+                >Sign Up</a
+              >
             </div>
           </div>
         </nav>
       </div>
     </header>
+    <!-- Hero Section -->
+    <section class="h-64 md:h-96 lg:h-128 group relative">
+      <!-- Hero Background Image -->
+      <img
+        src="images/batman.jpg"
+        alt="batman"
+        class="h-full w-full object-cover"
+      />
+      <!-- Hero Content -->
+      <div
+        class="absolute bottom-0 w-full bg-gradient-to-b from-transparent to-black"
+      >
+        <!-- Hero Content Container -->
+        <div class="cotainer pl-10 lg:pl-0">
+          <h3
+            class="text-gega-melon tracking-wider group-hover:mb-1 duration-500"
+          >
+            Action, Drama, Thriller
+          </h3>
+          <h1 class="text-4xl lg:text-6xl text-gega-grey group-hover:mb-1 duration-500">
+            The Dark Knight
+          </h1>
+          <p class="text-gega-grey group-hover:mb-2 duration-500 w-3/4 lg:w-2/3 text-sm lg:text-base">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas
+            expedita similique est corrupti labore culpa dolorum exercitationem
+            ab magnam suscipit?
+          </p>
+          <!-- Detail Container -->
+          <div
+            class="flex space-x-8 opacity-0 group-hover:opacity-100 group-hover:mb-10 lg:group-hover:mb-20 duration-1000"
+          >
+            <!-- Watch -->
+            <div class="flex space-x-2 items-center cursor-pointer">
+              <a
+                href="#"
+                class="text-gega-grey uppercase lg:text-lg hover:text-gega-red duration-500"
+                >Watch Trailer</a
+              >
+              <div
+                class="flex h-8 w-8 items-center justify-center bg-gega-red text-gega-grey rounded-full"
+              >
+                <i class="fas fa-play"></i>
+              </div>
+            </div>
+            <!-- INFO -->
+            <div class="flex space-x-2 items-center cursor-pointer">
+              <a
+                href="#"
+                class="text-gega-grey uppercase lg:text-lg hover:text-gega-red duration-500"
+                >Full Synopsis</a
+              >
+              <div
+                class="flex h-8 w-8 items-center justify-center bg-gega-red text-gega-grey rounded-full"
+              >
+                <i class="fas fa-arrow-right"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
+      <!-- Points -->
+
+      <div
+        class="flex space-x-3 absolute bottom-5 left-10 opacity-0 group-hover:opacity-100 duration-1000"
+      >
+        <div class="w-3 h-3 lg:w-4 lg:h-4 rounded-full bg-gega-grey"></div>
+        <div class="w-3 h-3 lg:w-4 lg:h-4 rounded-full bg-gega-red"></div>
+        <div class="w-3 h-3 lg:w-4 lg:h-4 rounded-full bg-gega-grey"></div>
+        <div class="w-3 h-3 lg:w-4 lg:h-4 rounded-full bg-gega-grey"></div>
+      </div>
+    </section>
   </body>
 </html>
